tests/rosetta/out/Fortran/md5.f90
! Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
program md5
  implicit none
  integer, parameter :: testpkg_Answer = 42
  real, parameter :: testpkg_Pi = 3.14
  integer :: pair
  integer, dimension(8) :: arr0 = (/(/'d41d8cd98f00b204e9800998ecf8427e',''/),(/'0cc175b9c0f1b6a831c399e269772661','a'/),(/'900150983cd24fb0d6963f7d28e17f72','abc'/),(/'f96b697d7cb7938d525a2f31aaf161d0','message digest'/),(/'c3fcd3d76192e4007dfb496cca67e13b','abcdefghijklmnopqrstuvwxyz'/),(/'d174ab98d277d9f5a5611c2c9f419d9f','ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789'/),(/'57edf4a22be3c955ac49da2e2107b67a','12345678901234567890' // '123456789012345678901234567890123456789012345678901234567890'/),(/'e38ca1d920c4b8b8d3946b2c72f01680','The quick brown fox jumped over the lazy dog''s back'/)/)
  integer :: i0
    integer :: sum
  do i0 = 1, 8
    pair = arr0(i0)
    sum = testpkg%MD5Hex(pair(((1)+1)))
    if ((sum /= pair(((0)+1)))) then
      print *, 'MD5 fail'
      print *, '  for string,', pair(((1)+1))
      print *, '  expected:  ', pair(((0)+1))
      print *, '  got:       ', sum
    end if
  end do
  
  contains
  integer function testpkg_Add(a, b) result(res)
    integer, intent(in) :: a, b
    res = a + b
    return
  end function testpkg_Add
end program md5
